logs/epio.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/epio'...
Compiling './lib/python3.5/site-packages/epio/client.py'...
***   File "./lib/python3.5/site-packages/epio/client.py", line 37
    print "Unsupported proxy url: %s" % proxy_url
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/epio/commands'...
Compiling './lib/python3.5/site-packages/epio/commands/__init__.py'...
***   File "./lib/python3.5/site-packages/epio/commands/__init__.py", line 87
    except CommandError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epio/commands/create.py'...
***   File "./lib/python3.5/site-packages/epio/commands/create.py", line 16
    print "This directory is already associated with the app '%s'" % open(".epio-app").read().strip()
                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epio/commands/delete.py'...
***   File "./lib/python3.5/site-packages/epio/commands/delete.py", line 14
    print "Deleted http://%s.ep.io" % self.app_name
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/epio/commands/ps.py'...
***   File "./lib/python3.5/site-packages/epio/commands/ps.py", line 15
    print "%-10s  %-30s  %-15s  %-15s  %s" % ("STATE", "LOCATION", "MEMORY", "TYPE", "COMMAND")
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epio/commands/resume.py'...
***   File "./lib/python3.5/site-packages/epio/commands/resume.py", line 14
    print "Resumed http://%s.ep.io" % self.app_name
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/epio/commands/suspend.py'...
***   File "./lib/python3.5/site-packages/epio/commands/suspend.py", line 14
    print "Suspended http://%s.ep.io" % self.app_name
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/epio/commands/upload.py'...
***   File "./lib/python3.5/site-packages/epio/commands/upload.py", line 17
    print "Uploading %s as app %s" % (os.path.abspath("."), app)
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epio/commands/upload_ssh_key.py'...
***   File "./lib/python3.5/site-packages/epio/commands/upload_ssh_key.py", line 28
    print "You do not seem to have the HOME environment variable required by git ssh."
                                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/epio/skeleton'...
Listing './lib/python3.5/site-packages/epio/ssl'...
Listing './lib/python3.5/site-packages/epio-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
